# Titanium-MCP

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY.md  approval.py  audit.py  bandit.yaml  build-and-push.sh  config.py  docker-compose.yml  k8s-deployment.yaml  mcp_tools.py  policy.py  pyproject.toml  requirements.txt  server.py  signing.py  tit.md  utils.py  worktree.py
.github/workflows/: ci.yaml
evals/: atomic_write_eval.py  run_eval.py  smoke_eval.py  tool_contract_eval.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_worktree.py
tests/unit/: __init__.py  test_approval.py  test_audit.py  test_mcp_tools.py  test_policy.py  test_utils.py
titanium_repo_operator/: __init__.py  approval.py  audit.py  config.py  mcp_tools.py  policy.py  server.py  signing.py  utils.py  worktree.py
